@@ -1,2 +1,2 @@
 /* versio.c -- autogenerated by version.sh at distribution creation */
-char *version_time = "9506131642";
+char *version_time = "9506191522";
